# Wildfire-Risk-Assessment-Dashboard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  app.py  justfile  pyproject.toml  requirements.txt
wildfire-risk-dashboard/.github/: ISSUE_TEMPLATE.md
wildfire-risk-dashboard/docs/: index.md  installation.md  usage.md
wildfire-risk-dashboard/src/wildfire_risk_dashboard/: __init__.py  utils.py  wildfire_risk_dashboard.py
wildfire-risk-dashboard/tests/: test_google_api.py  test_weather.py
wildfire_risk_dashboard/src/wildfire_risk_dashboard/: cli.py  utils.py  wildfire_risk_dashboard.py
wildfire_risk_dashboard/tests/: __init__.py  test_weather.py  test_wildfire_risk_dashboard.py
